Native/Test/KL/issue-424.out
issue-424.kl:7:3: error: code is unreachable
